# yamlgrep

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml  release-please.yml
src/yamlgrep/: main.py
